@@ -1,4 +1,4 @@
-(defproject wil "v2.26.0"
+(defproject wil "2.27.1"
   :description "for 2023 python classes"
   :url "https://wil.kyutech.ac.jp"
   :dependencies
@@ -21,25 +21,25 @@
    [luminus-transit "0.1.6"]
    [luminus-undertow "0.1.18"]
    [luminus/ring-ttl-session "0.3.3"]
-   [markdown-clj "1.12.3"]
+   [markdown-clj "1.12.4"]
    [metosin/muuntaja "0.6.11"]
    [metosin/reitit "0.8.0"]
    [metosin/ring-http-response "0.9.5"]
    [mount "0.1.23"]
    [nrepl "1.3.1"]
-   [org.clojure/clojure "1.12.0"]
+   [org.clojure/clojure "1.12.2"]
    [org.clojure/clojurescript "1.11.132" :scope "provided"]
    [org.clojure/core.async "1.8.741"]
    [org.clojure/tools.cli "1.1.230"]
    [org.clojure/tools.logging "1.3.0"]
-   [org.postgresql/postgresql "42.7.5"]
+   [org.postgresql/postgresql "42.7.7"]
    [org.webjars.npm/bulma "1.0.4"]
    [org.webjars.npm/material-icons "1.13.2"]
    [org.webjars/webjars-locator "0.52"]
    [org.webjars/webjars-locator-jboss-vfs "0.1.0"]
    [reagent "1.2.0"] ; 1.3.0
-   [ring-webjars "0.3.0"]
-   [ring/ring-core "1.14.1"]
+   [ring-webjars "0.3.1"]
+   [ring/ring-core "1.14.2"]
    [ring/ring-defaults "0.6.0"]
    [selmer "1.12.62"]
    [thheller/shadow-cljs "2.28.23" :scope "provided"]
@@ -65,17 +65,19 @@
              :resource-paths ["env/prod/resources"]}
    :dev     [:project/dev :profiles/dev]
    :test    [:project/dev :project/test :profiles/test]
-   :project/dev  {:jvm-opts ["-Dconf=dev-config.edn"]
+   :project/dev  {:jvm-opts ["-Dconf=dev-config.edn"
+                             "--enable-native-access=ALL-UNNAMED"
+                             "--sun-misc-unsafe-memory-access=allow"]
                   :dependencies [[binaryage/devtools "1.0.7"]
-                                 [cider/piggieback "0.6.0"]
+                                 [cider/piggieback "0.6.1"]
                                  [org.clojure/tools.namespace "1.5.0"]
                                  [pjstadig/humane-test-output "0.11.0"]
                                  [prone "2021-04-23"]
-                                 [ring/ring-devel "1.14.1"]
+                                 [ring/ring-devel "1.14.2"]
                                  [ring/ring-mock "0.4.0"]]
                   :plugins      [[com.jakemccrary/lein-test-refresh "0.26.0"]
                                  [jonase/eastwood "1.4.3"]
-                                 [cider/cider-nrepl "0.55.7"]]
+                                 [cider/cider-nrepl "0.57.0"]]
                   :source-paths ["env/dev/clj"  "env/dev/cljs" "test/cljs"]
                   :resource-paths ["env/dev/resources"]
                   :repl-options {:init-ns user
